# cargo-ci

./: Cargo.toml  Readme.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs  parser.rs
tests/: lib.rs
tests/assets/: dest.toml  dest_only_dev.toml  dest_without_dev.toml  source.toml  source_only_dev.toml  source_without_dev.toml
tests/assets/project1/: Cargo.expected.toml  Cargo.toml
