[package]
name = "cargo-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.0.2"
features = [
    "derive"
]

[dependencies.toml]
version = "0.5.9"

[dependencies.nom]
version = "7.1.1"