[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toto = {git = "git@gitlab.com:orga/project.git", tag="1.0.0"}

[dev-dependencies.titi]
git = "git@gitlab.domain.tld:myorg/sub_project/too/deep.git"
tag = "1.0.0"
default-no-features = "true"
features = [
 "feature1",
 "test"
]